# ltrace

./: BUGS  CREDITS  ChangeLog  Makefile.am  NEWS  README  TODO  autogen.sh  backend.h  bench.h  bits.h  breakpoint.h  breakpoints.c  callback.h  common.h  configure.ac  debug.c  debug.h  defs.h  demangle.c  demangle.h  dict.c  dict.h  display_args.c  dwarf_prototypes.c  dwarf_prototypes.h  execute_program.c  expr.c  expr.h  fetch.c  fetch.h  filter.c  filter.h  forward.h  glob.c  glob.h  handle_event.c  lens_default.c  lens_default.h  lens_enum.c  (+35 more)
etc/: libc.so.conf  libm.so.conf  libpthread.so-types.conf  libpthread.so.conf  ltrace.conf  syscalls.conf
sysdeps/: sysdep.h
sysdeps/linux-gnu/: Makefile.am  breakpoint.c  events.c  events.h  hooks.c  os.h  proc.c  trace-defs.h  trace.c  trace.h
sysdeps/linux-gnu/aarch64/: fetch.c  regs.c  trace.c
sysdeps/linux-gnu/alpha/: plt.c  regs.c  trace.c
sysdeps/linux-gnu/arm/: Makefile.am  arch.h  breakpoint.c  fetch.c  plt.c  regs.c  regs.h  trace.c
sysdeps/linux-gnu/cris/: plt.c  regs.c  trace.c
sysdeps/linux-gnu/i386/: arch.h  plt.c  regs.c  trace.c
sysdeps/linux-gnu/ia64/: Makefile.am  arch.h  breakpoint.c  fetch.c  plt.c  regs.c  trace.c
sysdeps/linux-gnu/m68k/: Makefile.am  arch.h  fetch.c  plt.c  regs.c  syscallent.h  trace.c
sysdeps/linux-gnu/mips/: arch.h  mips.h  plt.c  regs.c  trace.c
sysdeps/linux-gnu/mipsel/: Doxyfile  Makefile.am  arch.h  mipsel.h  plt.c  regs.c  syscallent.h  trace.c
sysdeps/linux-gnu/ppc/: Makefile.am  arch.h  fetch.c  plt.c  ptrace.h  regs.c  syscallent.h  trace.c
sysdeps/linux-gnu/s390/: Makefile.am  arch.h  fetch.c  plt.c  regs.c  trace.c
sysdeps/linux-gnu/sparc/: plt.c  regs.c  trace.c
sysdeps/linux-gnu/x86/: Makefile.am  arch.h  fetch.c  plt.c  ptrace.h  regs.c  syscallent.h  syscallent1.h  trace.c
sysdeps/linux-gnu/x86_64/: arch.h  fetch.c  plt.c  regs.c  trace.c
testsuite/: Makefile.am
testsuite/lib/: ltrace.exp
testsuite/ltrace.main/: Makefile.am  XDG_CONFIG_DIRS.exp  branch_func.c  branch_func.exp  dwarf.conf  dwarf.exp  dwarflib.c  filt.c  filt1.c  filt2.c  filters.exp  hello-vfork.c  hello-vfork.exp  main-internal.exp  main-threaded.c  main-threaded.exp  main-vfork.exp  main.exp  parameters-lib.c  parameters.c  parameters.conf  parameters.exp  parameters2.exp  parameters3.exp  system_call_params.exp  system_calls.exp
testsuite/ltrace.minor/: Makefile.am  attach-process-dlopen.exp  attach-process.exp  demangle.exp  libdl-simple.exp  trace-clone.c  trace-exec.exp  trace-irelative.exp  wchar.exp
testsuite/ltrace.torture/: Makefile.am  ppc-lwarx.exp  vfork-thread.c  vfork-thread.exp
